# raytracer

./: ;  Cargo.toml  README.md  flake.nix
src/: app.rs  lib.rs  main.rs  raytracing.rs  render_env.rs  scene.rs  screen.rs  world.rs
src/common/: consts.rs  load.rs  mod.rs  shapes.rs  time.rs  vertex.rs
src/resources/: camera.rs  material.rs  mod.rs  objects.rs
src/scene/: objects.rs
src/shaders/: color.wgsl  compute.wgsl  projection.wgsl  raytrace.wgsl  raytrace_kernal.wgsl  screen_shader.wgsl
src/world/: camera.rs  objects.rs
