[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.24.2", features = ["bytemuck", "rand"] }
pollster = "0.3.0"
rand = "0.8.5"
wgpu = { version = "0.18.0", features = ["trace"] }
winit = { version = "0.29.2", features = ["rwh_05"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
